--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-async-handler": "^1.2.0",
     "express-joi-validation": "^5.0.1",
     "express-validation": "^3.0.8",
-    "joi": "^17.6.0"
+    "joi": "^17.6.0",
+    "require-dir": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
